<resources>
    <string name="app_name">ReviewProject</string>
    <string name="app_signin">로그인</string>
    <string name="app_signup">회원가입</string>
    <string name="app_userid">아이디를 입력하세요</string>
    <string name="app_userpassword">암호를 입력하세요</string>
    <string name="app_sales">매출관리</string>
    <string name="app_customer">고객관리</string>
    <string name="app_produt">상품관리</string>
</resources>
