<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.reviewproject.MenuActivity">


    <Button
        android:id="@+id/button_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_customer"
        android:onClick="onClickCustomer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/button_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_sales"
        android:onClick="onClickSales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_produt"
        android:onClick="onClickProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />
</android.support.constraint.ConstraintLayout>
